lang.java.statics.test/tests/positive/classes/nested/pathdependentsupertypeinnerclassref.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {
    }
}

[C]
public class C extends A {
}

[T]
public class T {
    public void m() {
        C c = new C();
        c.new B();
    }
}

