lang.java.statics.test/tests/negative/classes/nested/pathequalityunbound.no.javtest
STATIX fail java\.names\.member-type-name.*Id\(\"I\"\)
JAVAC  fail cannot find symbol

[A]
public class A {
    public class I {}
}

[B]
public class B extends A {}

[C]
public class C {}

[Test]
class Test {
    public void m() {
        C.I i = new B().new I();
    }
}

